Fix blog title not centered

--- a/themes/apollo/source/css/_partial/article.styl
+++ b/themes/apollo/source/css/_partial/article.styl
@@ -241,7 +241,7 @@
 
 .tag-list-link
   color: rgb(117, 117, 117)
-  line-height: 2em
+  line-height: 32px
 
   &:hover
     color: #555
