--- a/themes/apollo/source/css/_partial/header.styl
+++ b/themes/apollo/source/css/_partial/header.styl
@@ -14,22 +14,21 @@
 .blog-title
   float: left
   display: inline-block
-  font-size: 120%
-  font-weight: bold
   background-color: #222
-  letter-spacing: .2em
-  margin: 10px 0
-  line-height: 2.5em
-  padding: 0 1.3em
-  padding-top: 2px
   cursor: pointer
   transition: background-color 0.3s ease
+  padding: 2px 24px 0 27px
+
   &:hover
     background-color: #444
     a
       color: white
   a
     position: relative
-    left: .1em
-    padding: .4em 0
     color: white
+    font-weight: bold
+    text-align: center
+    font-size: 20px
+    margin: 16px 0
+    line-height: 48px
+    letter-spacing: 4px
